fix(webapp): change align-items for main-section

--- a/src/main/webapp/sass/main.sass
+++ b/src/main/webapp/sass/main.sass
@@ -47,6 +47,7 @@ body
     margin: 20px 0
     display: flex
     justify-content: space-between
+    align-items: flex-start
 
 .content
     margin: 5px
